--- a/walk-demo.qmd
+++ b/walk-demo.qmd
@@ -31,8 +31,12 @@ sheets <- sheet_names(ss) # get the names of individual sheets
 gap_dfs <- map(sheets, .f = \(x) read_sheet(ss, sheet = x))
 ```
 
-Note that the backslash syntax for anonymous functions (e.g. `\(x) x + 1`) was introduced in base R version 4.1.0 as a shorthand for `function(x) x + 1`.
+::: callout-tip
+## Tip
+
+The backslash syntax for anonymous functions (e.g. `\(x) x + 1`) was introduced in base R version 4.1.0 as a shorthand for `function(x) x + 1`.
 If you're using an earlier version of R, you can use purrr's shorthand: a formula (e.g. `~ .x + 1`).
+:::
 
 Typically, you'd want to combine these data frames into one to make it easier to work with your data.
 To do so, we'll use `list_rbind()` on `gap_dfs`.
